# gorgon_surveyor

./: .dockerignore  .gitignore  .mise.toml  CLAUDE.md  Dockerfile  README.md  TODO.md  USAGE.md  fly.toml  mix.exs  package-lock.json  package.json
.github/workflows/: ci.yml
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/plans/: 2026-03-06-calibration-design.md  2026-03-06-calibration-plan.md  2026-03-06-gorgon-survey-implementation.md  2026-03-06-surveying-tool-design.md  2026-03-07-inventory-overlay-design.md  2026-03-07-inventory-overlay.md  2026-03-07-overlay-fixes.md  2026-03-08-calibration-redesign.md  2026-03-09-auto-detect-design.md  2026-03-09-auto-detect-implementation.md  2026-03-09-phoenix-implementation.md  2026-03-09-phoenix-rewrite-design.md
lib/: gorgon_survey.ex  gorgon_survey_web.ex
lib/gorgon_survey/: app_state.ex  application.ex  config_store.ex  log_parser.ex  log_watcher.ex  mailer.ex  session_manager.ex  survey_detector.ex  trilateration.ex
lib/gorgon_survey_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
rel/: env.sh.eex
scripts/: build-desktop.sh
src/: constants.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  hotkey.rs  lib.rs  log_parser.rs  log_watcher.rs  main.rs  math.rs  path_optimizer.rs  portal.rs  state.rs  triangulator.rs  zones.rs
src/components/: MotherlodePanel.tsx  Settings.tsx  SurveyList.tsx
src/hooks/: useSurveyState.ts
src/pages/: ControlPanel.tsx  (+2 more)
(+36 files in other folders)
