[package]
name = "gorgon-survey"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-shell = "2.3"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
